--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 <h1 class="display-5 text-success mb-3">&#x25CF; Plans</h1>
                 <div class="btn-group btn-group-lg w-100 d-none d-sm-flex" role="group" aria-label="Basic radio toggle button group">
                     <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
-                    <label class="btn btn-success py-4" for="btnradio1" data-bs-toggle="collapse"
+                    <label class="btn btn-success py-4 show" for="btnradio1" data-bs-toggle="collapse"
                         data-bs-target="#startup-accordion" aria-expanded="true" aria-controls="startup-accordion"
                         role="button">
                         <h3><strong>Startup</strong></h3>
