--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Greenfield Valuations</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-        integrity="sha256-PI8n5gCcz9cQqQXm3PEtDuPG8qx9oFsFctPg0S5zb8g=" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+            integrity="sha256-PI8n5gCcz9cQqQXm3PEtDuPG8qx9oFsFctPg0S5zb8g=" crossorigin="anonymous">
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet"> -->
@@ -156,33 +156,33 @@
         <div id="compensation-plans" class="container mt-4 mb-5">
             <div class="col-xl-9 mx-auto d-flex flex-column">
                 <h1 class="display-5 text-success mb-3">&#x25CF; Plans</h1>
-                <div class="btn-group btn-group-lg w-100 d-none d-sm-flex" role="group" aria-label="Basic radio toggle button group">
-                    <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
-                    <label class="btn btn-success py-4 show" for="btnradio1" data-bs-toggle="collapse"
+                <div class="btn-group btn-group-lg w-100 d-none d-sm-flex" role="group">
+                    <input type="radio" class="btn-check" name="btnradio" id="btnradio1a" autocomplete="off" checked="true">
+                    <label class="btn btn-success py-4" for="btnradio1a" data-bs-toggle="collapse"
                         data-bs-target="#startup-accordion" aria-expanded="true" aria-controls="startup-accordion"
                         role="button">
                         <h3><strong>Startup</strong></h3>
                         <h5 class="m-0">Seed-funded</h5>
                     </label>
 
-                    <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
-                    <label class="btn btn-success py-4 collapsed" for="btnradio2" data-bs-toggle="collapse"
+                    <input type="radio" class="btn-check" name="btnradio" id="btnradio2a" autocomplete="off" >
+                    <label class="btn btn-success py-4" for="btnradio2a" data-bs-toggle="collapse"
                         data-bs-target="#scaleup-accordion" aria-expanded="false" aria-controls="scaleup-accordion"
                         role="button">
                         <h3><strong>Scaleup</strong></h3>
                         <h5 class="m-0">Series A &rarr; C</h5>
                     </label>
 
-                    <input type="radio" class="btn-check" name="btnradio" id="btnradio4" autocomplete="off">
-                    <label class="btn btn-success py-4 collapsed" for="btnradio4" data-bs-toggle="collapse"
+                    <input type="radio" class="btn-check" name="btnradio" id="btnradio4a" autocomplete="off">
+                    <label class="btn btn-success py-4" for="btnradio4a" data-bs-toggle="collapse"
                         data-bs-target="#grownup-accordion" aria-expanded="false" aria-controls="grownup-accordion"
                         role="button">
                         <h3><strong>Grownup</strong></h3>
                         <h5 class="m-0">Late-stage exits</h5>
                     </label>
                 </div>
-                <div class="btn-group-vertical btn-group-lg w-100 d-flex d-sm-none" role="group" aria-label="Basic radio toggle button group">
-                    <input type="radio" class="btn-check" name="btnradio" id="btnradio1b" autocomplete="off" checked>
+                <div class="btn-group-vertical btn-group-lg w-100 d-flex d-sm-none" role="group">
+                    <input type="radio" class="btn-check" name="btnradiob" id="btnradio1b" autocomplete="off" checked>
                     <label class="btn btn-success py-2" for="btnradio1b" data-bs-toggle="collapse"
                         data-bs-target="#startup-accordion" aria-expanded="true" aria-controls="startup-accordion"
                         role="button">
@@ -190,7 +190,7 @@
                         <h5 class="m-0">Seed-funded</h5>
                     </label>
 
-                    <input type="radio" class="btn-check" name="btnradio" id="btnradio2b" autocomplete="off">
+                    <input type="radio" class="btn-check" name="btnradiob" id="btnradio2b" autocomplete="off">
                     <label class="btn btn-success py-2" for="btnradio2b" data-bs-toggle="collapse"
                         data-bs-target="#scaleup-accordion" aria-expanded="false" aria-controls="scaleup-accordion"
                         role="button">
@@ -198,7 +198,7 @@
                         <h5 class="m-0">Series A &rarr; C</h5>
                     </label>
 
-                    <input type="radio" class="btn-check" name="btnradio" id="btnradio4b" autocomplete="off">
+                    <input type="radio" class="btn-check" name="btnradiob" id="btnradio4b" autocomplete="off">
                     <label class="btn btn-success py-2" for="btnradio4b" data-bs-toggle="collapse"
                         data-bs-target="#grownup-accordion" aria-expanded="false" aria-controls="grownup-accordion"
                         role="button">
