--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                         <h5 class="m-0">Late-stage exits</h5>
                     </label>
                 </div>
-                <div class="btn-group-vertical btn-group-lg w-100 d-flex d-sm-none" role="group">
+                <div class="btn-group-vertical btn-group-lg m-2 p-1 d-flex d-sm-none" role="group">
                     <input type="radio" class="btn-check" name="btnradiob" id="btnradio1b" autocomplete="off" checked>
                     <label class="btn btn-success py-2" for="btnradio1b" data-bs-toggle="collapse"
                         data-bs-target="#startup-accordion" aria-expanded="true" aria-controls="startup-accordion"
@@ -608,13 +608,13 @@
         </div>
         <div id="team" class="container mt-4 mb-5">
             <div class="col-xl-9 mx-auto d-flex flex-column">
-                <h1 class="display-5 text-primary">&#x25CF; Team</h1>
-                <div class="row row-cols-3 g-3">
+                <h1 class="display-5 text-success">&#x25CF; Team</h1>
+                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 flex-column flex-sm-row">
                     <div class="col">
                         <div class="card border-light">
                             <div class="card-body d-flex flex-column justify-content-center">
                                 <h5 class="card-title display-6">Arjan<br>Bisseling</h5>
-                                <h5 class="card-subtitle mb-3 text-primary">Partner</h5>
+                                <h5 class="card-subtitle mb-3 text-success">Partner</h5>
                                 <img class="img-fluid rounded overflow-hidden mb-3" src="arjan-1-300x300.jpg">
                                 <a href="https://www.linkedin.com/in/arjan-bisseling-509a356/"
                                     class="card-link icon-link"><svg width="24" height="24" role="img">
@@ -631,7 +631,7 @@
                         <div class="card border-light">
                             <div class="card-body d-flex flex-column justify-content-center">
                                 <h5 class="card-title display-6">Sven<br>Kempers</h5>
-                                <h5 class="card-subtitle mb-3 text-primary">Partner</h5>
+                                <h5 class="card-subtitle mb-3 text-success">Partner</h5>
                                 <img class="img-fluid rounded overflow-hidden mb-3" src="sven-1-300x300.jpg">
                                 <a href="https://www.linkedin.com/in/sven-kempers/" class="card-link icon-link"><svg
                                         width="24" height="24" role="img">
@@ -648,7 +648,7 @@
                         <div class="card border-light">
                             <div class="card-body d-flex flex-column justify-content-center">
                                 <h5 class="card-title display-6">Evrim<br>Öztamur</h5>
-                                <h5 class="card-subtitle mb-3 text-primary">Valuation specialist</h5>
+                                <h5 class="card-subtitle mb-3 text-success">Valuation specialist</h5>
                                 <img class="img-fluid rounded overflow-hidden mb-3" src="evrim-1-300x300.jpg">
                                 <a href="https://www.linkedin.com/in/evrimoztamur/" class="card-link icon-link"><svg
                                         width="24" height="24" role="img">
