--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
         <div id="team" class="container mt-4 mb-5">
             <div class="col-xl-9 mx-auto d-flex flex-column">
                 <h1 class="display-5 text-success">&#x25CF; Team</h1>
-                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 flex-column flex-sm-row">
+                <div class="row row-cols-2 row-cols-md-3 g-3 flex-row">
                     <div class="col">
                         <div class="card border-light">
                             <div class="card-body d-flex flex-column justify-content-center">
